Time: 1 ms (53.21%), Space: 42.6 MB (44.49%) - LeetHub